Fixed the alignment of the text in the App div

--- a/public/style.css
+++ b/public/style.css
@@ -16,7 +16,7 @@
 
 .App {
       font-family: "Futura", sans-serif;
-    text-align: center;
+    /* text-align: center; */
     min-height: 90vh;
     display: flex;
     flex-direction: column;
@@ -113,7 +113,7 @@ menu a:hover {
     /* padding: 20px 0; */
     margin-top: 60px;
     /* padding-bottom: 40px;  */
-    transition: border-color 0.1s ease, box-shadow 0.3s ease, transform 0.3s ease;
+    
     border: dotted 5px black;
 
     /* new code from old drop box */
@@ -153,10 +153,10 @@ menu a:hover {
     box-shadow: 0px 0px 0px rgb(150, 134, 255);
     border-color: black;
     /* transform:  translateX(3px) translateY(4px); */
-    border: dotted 8px black;
+   
     background-color: rgba(91, 74, 197, 0.469);
-    border: dotted 8px black; /* Increase border size on hover */
-    transform: scale(1.03); /* Slightly scale up the drop area */
+    border: dotted 11px black; /* Increase border size on hover */
+    transform: scale(1.01); /* Slightly scale up the drop area */
    
    
  
@@ -245,6 +245,8 @@ menu a:hover {
     position: relative;
     /* margin: -100px; */
     /* margin-top: -160px; */
+    margin-left: auto;
+    margin-right: auto;
 }
 
   .upload-container p {
